# waza-proto

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  justfile
agent/: .env.example  README.md  coach_agent.py  pyproject.toml
plans/: features.md  index.md  shu-ai-coach-v0.md  tech-debt-tracker.md
plans/active/: 07-background-streaming.md  08-test-suite.md  10-jwt-auto-refresh.md  11-video-quality-profiling.md  12-glasses-smoothing-buffer.md  15-encoded-frame-ingest.md  16-encoded-smoother.md  18-test-suite-gaps.md  19-coach-loop-mvp.md  22-rear-camera-source.md  23-room-close-on-disconnect.md  24-full-bleed-streaming-ui.md  26-viewer-talkback-audio.md  shu-ai-coach-v0.md
plans/archived/: feature-archive.md  front-camera-backgrounding.md  passthrough-self-preview.md
plans/completed/: 02-browser-viewer.md  03-test-publisher.md  04-ios-front-camera.md  05-wdat-glasses-frames.md  06-shareable-viewer.md  07-background-streaming.md  09-app-icon.md  11-video-quality-profiling.md  12-glasses-smoothing-buffer.md  13-glasses-disconnected-status.md  14-viewer-fixed-aspect-box.md  15-encoded-frame-ingest.md  16-encoded-smoother.md  17-encoded-freeze-recovery.md  (+3 more)
scripts/: analyze-video-quality.js  capture-ios-profiler-jsonl.sh  compare-profile-runs.js  mint-publisher-token.sh  mint-token.sh  mint-viewer-invite-url.js  profile-video-quality.sh  publish-test-pattern.sh  refresh-secrets.sh  run-glasses-relay.sh  run-paired-profile.sh  run-stage1-profile.sh
viewer/: .gitignore  index.html  package-lock.json  package.json  playwright.config.js  vitest.config.js
(+72 files in other folders)
